--- a/index.html
+++ b/index.html
@@ -2,20 +2,121 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8" />
-  <title>SentinelMesh – AI Civic Safety Mesh for Schools & Cities</title>
-  <meta name="viewport" content="width=device-width, initial-scale=1" />
-  <meta
-    name="description"
-    content="SentinelMesh is an AI-powered civic safety mesh that deploys intelligent nodes across schools, campuses and cities to detect threats and automate real-time alerts."
-  />
+  <title>SentinelMesh – AI Civic Safety Mesh</title>
+  <meta name="viewport" content="width=device-width, initial-scale=1">
+  <meta name="description" content="AI-powered civic safety mesh for schools, campuses, and smart cities. Real-time detection, intelligent alerts, and decentralized node security. Join the early access pilot.">
+
   <style>
-    /* [CSS kept exactly as before] */
-    /* Due to space, I’m not repeating the whole CSS block here.
-       Use the previous full HTML I gave you, or say “send full HTML again”
-       and I’ll repost it cleanly to copy-paste. */
+    body {
+      margin: 0;
+      font-family: Arial, sans-serif;
+      background: #0a0a0a;
+      color: #e6e6e6;
+    }
+
+    header {
+      padding: 40px 20px;
+      text-align: center;
+      background: linear-gradient(135deg, #1a1a1a, #000000);
+      border-bottom: 1px solid #333;
+    }
+
+    h1 {
+      font-size: 32px;
+      margin-bottom: 10px;
+      color: #00e5ff;
+      font-weight: 700;
+    }
+
+    h2 {
+      color: #00e5ff;
+      font-size: 26px;
+      margin-top: 40px;
+      text-align: center;
+    }
+
+    p {
+      max-width: 600px;
+      margin: 15px auto;
+      font-size: 16px;
+      line-height: 1.6;
+      text-align: center;
+      color: #cccccc;
+    }
+
+    .btn-primary {
+      background: #00e5ff;
+      color: #000;
+      padding: 14px 22px;
+      border: none;
+      border-radius: 6px;
+      cursor: pointer;
+      font-size: 18px;
+      font-weight: bold;
+      margin-top: 20px;
+      transition: 0.3s;
+    }
+
+    .btn-primary:hover {
+      background: #00b8cc;
+    }
+
+    .section {
+      padding: 40px 20px;
+      text-align: center;
+    }
+
+    footer {
+      margin-top: 50px;
+      padding: 20px;
+      text-align: center;
+      font-size: 14px;
+      color: #666;
+    }
   </style>
 </head>
+
 <body>
-  <!-- [rest of HTML content here – same as I sent earlier] -->
+
+  <header>
+    <h1>SentinelMesh</h1>
+    <p>AI-powered civic safety mesh for schools, campuses, and smart cities.</p>
+
+    <!-- BUTTON connected to your Google Form -->
+    <button class="btn-primary" onclick="window.location.href='https://docs.google.com/forms/d/e/1FAIpQLSfIHnKGUob2caCLyVUUc0411jclD9aCdouvRVic60uodmLq4Q/viewform?usp=preview'">
+      Join Early Access Pilot
+    </button>
+  </header>
+
+  <div class="section">
+    <h2>What is SentinelMesh?</h2>
+    <p>
+      SentinelMesh deploys lightweight AI nodes across buildings, campuses,
+      and city zones to detect threats, unusual patterns, and risks in
+      real time — without storing personal data.
+    </p>
+  </div>
+
+  <div class="section">
+    <h2>Why Pilots?</h2>
+    <p>
+      Our early access program partners with schools, councils, and
+      public operators to test real-time alerts, zone-level detection,
+      and automated response flows.
+    </p>
+  </div>
+
+  <div class="section">
+    <h2>Who Can Participate?</h2>
+    <p>
+      Schools, local government, public buildings, campuses, retail hubs,
+      and infrastructure operators.
+    </p>
+  </div>
+
+  <footer>
+    SentinelMesh © 2025 — Civic AI Safety Network
+  </footer>
+
 </body>
 </html>
